5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1771_3121.log
== TEST (2019-05-23 18:49:18) 
-- CODE:
v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) =! 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
-- ERROR:
File "XXXX", line 7
    while (v1,v2) =! 0:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:49:27) 
-- CODE:
v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) != 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:49:42) 
-- CODE:
v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) != 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:51:24) 
-- CODE:
v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) != 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
	elif v1 == tesoura and v1 == pedra:
		print(BARSANULFO)
	elif v1 == tesoura and v2 == papel:
		print(EUSAPIA)
	elif v1 == tesoura and v2 == tesoura:
		print(EMPATE)
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:51:40) 
-- CODE:
v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) != 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
	elif v1 == tesoura and v1 == pedra:
		print(BARSANULFO)
	elif v1 == tesoura and v2 == papel:
		print(EUSAPIA)
	elif v1 == tesoura and v2 == tesoura:
		print(EMPATE)
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:51:47) 
-- CODE:

v1 = array(eval(input("digite o vetor 1: ")))
v2 = array(eval(input("digite o vetor 2: ")))
pedra = 11
papel = 22
tesoura = 33
quant = size(v1,v2)
while (v1,v2) != 0:
	if v1 == pedra and v2 == papel:
		print(BARSANULFO)
	elif v1 == pedra and v2 == tesoura:
		print(EUSAPIA)
	elif v1 == pedra and v2 == pedra:
		print(EMPATE)
	elif v1 == papel and v2 == pedra:
		print(EUSAPIA)
	elif v1 == papel and v2 == tesoura:
		print(BARSANULFO)
	elif v1 == papel and v2 == papel:
		print(EMPATE)
	elif v1 == tesoura and v1 == pedra:
		print(BARSANULFO)
	elif v1 == tesoura and v2 == papel:
		print(EUSAPIA)
	elif v1 == tesoura and v2 == tesoura:
		print(EMPATE)
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:34:48) 
-- CODE:
e = array(eval(input("digite o vetor 1: ")))
b = array(eval(input("digite o vetor 2: ")))
i=0
s1=0
s2=0
while(i<size(v1)):
	if(e[i]==11) and (b[i]==11):
		s1=s1+0
		s2=s2+0
	elif(e[i]==22) and (b[i]==22):
		s1=s1+0
		s2=s2+0
	elif(e[i]==33) and (b[i]==33):
		s1=s1+0
		s2=s2+0
	
	
	elif(e[i]==11) and (b[i]==22):
		s1=s1+0
		s2=s2+1
	elif(e[i]==11) and (b[i]==33):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==11):
		s1=s1+1
		s2=se+0
	elif(e[i]==22) and (b[i]==33):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==11):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==22):
		s1=s1+1
		s2=se+0
	i=i+1
print(i)
if(s1>s2):
	print("EUSAPIA")
elif(s1<s2):
	print("BARSANULFO")
elif(s1==s2):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:35:26) 
-- CODE:
from numpy import*
e = array(eval(input("digite o vetor 1: ")))
b = array(eval(input("digite o vetor 2: ")))
i=0
s1=0
s2=0
while(i<size(v1)):
	if(e[i]==11) and (b[i]==11):
		s1=s1+0
		s2=s2+0
	elif(e[i]==22) and (b[i]==22):
		s1=s1+0
		s2=s2+0
	elif(e[i]==33) and (b[i]==33):
		s1=s1+0
		s2=s2+0
	
	
	elif(e[i]==11) and (b[i]==22):
		s1=s1+0
		s2=s2+1
	elif(e[i]==11) and (b[i]==33):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==11):
		s1=s1+1
		s2=se+0
	elif(e[i]==22) and (b[i]==33):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==11):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==22):
		s1=s1+1
		s2=se+0
	i=i+1
print(i)
if(s1>s2):
	print("EUSAPIA")
elif(s1<s2):
	print("BARSANULFO")
elif(s1==s2):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:36:04) 
-- CODE:
from numpy import*
e = array(eval(input("digite o vetor 1: ")))
b = array(eval(input("digite o vetor 2: ")))
i=0
s1=0
s2=0
while(i<size(e)):
	if(e[i]==11) and (b[i]==11):
		s1=s1+0
		s2=s2+0
	elif(e[i]==22) and (b[i]==22):
		s1=s1+0
		s2=s2+0
	elif(e[i]==33) and (b[i]==33):
		s1=s1+0
		s2=s2+0
	
	
	elif(e[i]==11) and (b[i]==22):
		s1=s1+0
		s2=s2+1
	elif(e[i]==11) and (b[i]==33):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==11):
		s1=s1+1
		s2=se+0
	elif(e[i]==22) and (b[i]==33):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==11):
		s1=s1+0
		s2=se+1
	elif(e[i]==33) and (b[i]==22):
		s1=s1+1
		s2=se+0
	i=i+1
print(i)
if(s1>s2):
	print("EUSAPIA")
elif(s1<s2):
	print("BARSANULFO")
elif(s1==s2):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:37:00) 
-- CODE:
from numpy import*
e = array(eval(input("digite o vetor 1: ")))
b = array(eval(input("digite o vetor 2: ")))
i=0
s1=0
s2=0
while(i<size(e)):
	if(e[i]==11) and (b[i]==11):
		s1=s1+0
		s2=s2+0
	elif(e[i]==22) and (b[i]==22):
		s1=s1+0
		s2=s2+0
	elif(e[i]==33) and (b[i]==33):
		s1=s1+0
		s2=s2+0
	
	
	elif(e[i]==11) and (b[i]==22):
		s1=s1+0
		s2=s2+1
	elif(e[i]==11) and (b[i]==33):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==11):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==33):
		s1=s1+0
		s2=s2+1
	elif(e[i]==33) and (b[i]==11):
		s1=s1+0
		s2=s2+1
	elif(e[i]==33) and (b[i]==22):
		s1=s1+1
		s2=s2+0
	i=i+1
print(i)
if(s1>s2):
	print("EUSAPIA")
elif(s1<s2):
	print("BARSANULFO")
elif(s1==s2):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 14:37:22) 
-- CODE:
from numpy import*
e = array(eval(input("digite o vetor 1: ")))
b = array(eval(input("digite o vetor 2: ")))
i=0
s1=0
s2=0
while(i<size(e)):
	if(e[i]==11) and (b[i]==11):
		s1=s1+0
		s2=s2+0
	elif(e[i]==22) and (b[i]==22):
		s1=s1+0
		s2=s2+0
	elif(e[i]==33) and (b[i]==33):
		s1=s1+0
		s2=s2+0
	
	
	elif(e[i]==11) and (b[i]==22):
		s1=s1+0
		s2=s2+1
	elif(e[i]==11) and (b[i]==33):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==11):
		s1=s1+1
		s2=s2+0
	elif(e[i]==22) and (b[i]==33):
		s1=s1+0
		s2=s2+1
	elif(e[i]==33) and (b[i]==11):
		s1=s1+0
		s2=s2+1
	elif(e[i]==33) and (b[i]==22):
		s1=s1+1
		s2=s2+0
	i=i+1
print(i)
if(s1>s2):
	print("EUSAPIA")
elif(s1<s2):
	print("BARSANULFO")
elif(s1==s2):
	print("EMPATE")
-- EXECUTION TIME:
0.384407
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
